This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

08-Aug-2003 (Lars Duening)  (3.3.473)
  - (lex.c) Symbol __PTHREADS__ is defined if the driver is compiled
       for pthreads (suggested by Gawain).
  - (configure, pkg-tls) Added TLS support (using GnuTLS) - thanks,
       Gawain!

07-Aug-2003 (Lars Duening)  (3.3.472)
  - (doc/) Corrected a number of typos (thanks, Casey!)
  - (object.c) The efun variable_list() can now return variable values
       as well (thanks, Casey!).

07-Aug-2003 (Lars Duening)  (3.3.471)
  - (configure, pkg-mysql, main.c) Improved the recognition of mySQL when
       there's more than one mySQL installation. Additionally the pkg-mysql
       checks that the mysqlclient library is consistent with the header
       files (reported by Craig Venz).

05-Jul-2003 (Lars Duening)  (3.3.470)
  - (smalloc.c) Reduced the computational overhead of the small block
       defragmentation: since only newly freed blocks offer opportunities
       for defragmentation, only those are checked.
  - (object.c) Saving an object in the old format ('0') still used the
       shared value syntax for strings (reported by Bardioc).

31-Jul-2003 (Lars Duening)  (3.3.469)
  - (smalloc.c) Splitting of a block from a larger free list failed
       to preserve the PREV_BLOCK flag in the returned block, causing
       the defragmentation to malfunction on occasion (Mantis #0000007)

29-Jul-2003 (Lars Duening)  (3.3.468)
  - (smalloc.c) The small-block defragmentation clobbered an important
       flag in some blocks, causing the driver to crash (reported by Bardioc).
  - (smalloc.c) Reduced the amount of freelist-linking done for
       non-defragmentable blocks.

28-Jul-2003 (Lars Duening)  (3.3.467)
  - (prolang.y) If a pragma requires a function return type, the error
       message now names the active pragma in question instead of always