@@ -63,13 +63,12 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 473)
-(Parent-Version lpmud 3-3 472)
-(Version-Log "Symbol __PTHREADS__ is defined if the driver is using pthreads.
-Added TLS support using GnuTLS.")
+(Project-Version lpmud 3-3 474)
+(Parent-Version lpmud 3-3 473)
+(Version-Log "Corrected compilation errors in the TLS code.")
 (New-Version-Log
 "")
-(Checkin-Time "Fri, 08 Aug 2003 11:53:47 -0600")
+(Checkin-Time "Fri, 08 Aug 2003 20:29:02 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -107,7 +106,7 @@ Added TLS support using GnuTLS.")
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.10 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.68 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.536 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.537 644))
   (HISTORY (lpmud/f/49_HISTORY 1.330 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -175,7 +174,7 @@ Added TLS support using GnuTLS.")
   (src/call_out.c (lpmud/d/5_call_out.c 1.34.1.26 644))
   (src/closure.h (lpmud/f/44_closure.h 1.7.1.17 644))
   (src/closure.c (lpmud/d/4_closure.c 1.41.1.47.1.16 644))
-  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.58 644))
+  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.59 644))
   (src/comm.h (lpmud/d/3_comm.h 1.26.1.34 644))
   (src/driver.h (lpmud/f/36_driver.h 1.15.1.25 644))
   (src/dumpstat.h (lpmud/f/35_dumpstat.h 1.8 644))
@@ -273,7 +272,7 @@ Added TLS support using GnuTLS.")
   (src/pkg-pgsql.c (lpmud/d/b/39_pkg-pgsql. 1.2 644))
   (src/pkg-pgsql.h (lpmud/d/b/40_pkg-pgsql. 1.1 644))
   (src/pkg-tls.h (lpmud/e/b/10_pkg-tls.h 1.1 644))
-  (src/pkg-tls.c (lpmud/e/b/11_pkg-tls.c 1.1 644))
+  (src/pkg-tls.c (lpmud/e/b/11_pkg-tls.c 1.2 644))
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.18 644))
   (src/port.c (lpmud/39_port.c 1.17.1.9 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.17.1.3 644))
