@@ -1,6 +1,10 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+08-Aug-2003 (Lars Duening)  (3.3.474)
+  - (pkg-tls.c, comm.c) Corrected compilation errors in the TLS code
+      (I didn't have GnuTLS installed before, so I didn't notice).
+
 08-Aug-2003 (Lars Duening)  (3.3.473)
   - (lex.c) Symbol __PTHREADS__ is defined if the driver is compiled
        for pthreads (suggested by Gawain).
